# VineOffice

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs
src/core/: dependencies.rs  desktop_integration.rs  font_manager.rs  installation.rs  instance_manager.rs  mod.rs  prefix_naming.rs  product.rs  registry.rs  rollback.rs  state.rs  wine_prefix.rs
src/ui/: mod.rs  theme.rs
src/ui/components/: confirmation.rs  file_browser.rs  mod.rs  progress_bar.rs  status_panel.rs
src/ui/screens/: completion.rs  dependency_check.rs  file_selection.rs  installation.rs  instance_list.rs  mod.rs  welcome.rs
src/utils/: command.rs  format.rs  fs.rs  logging.rs  mod.rs  validators.rs
